# pythonProjectDjango22

./: .gitignore  README.md  pyproject.toml
catalog/: urls.py  views.py
catalog/templates/: contacts.html  home.html
config/: settings.py  urls.py
