[tool.poetry]
name = "pythonprojectdjango22"
version = "0.1.0"
description = ""
authors = ["ilay94 <tibaldshenk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
flake8 = "^7.1.1"
black = "^25.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
